# peer-conference

./: README.md  architecture.md
docs/: README.md  api-reference.md  chat-store.md  connection-store.md  crypto-utility.md  integration-guide.md  media-store.md  websocket-utility.md
simple-app/: index.html  main.css  main.js
svelte-video-conferencing/: package-lock.json  package.json  tailwind.config.js
svelte-video-conferencing/src/: App.svelte  ws.js
svelte-video-conferencing/src/components/: ChatPanel.svelte  ConnectionControls.svelte  DeviceControls.svelte  EventLog.svelte  OfferModal.svelte  VideoStream.svelte
svelte-video-conferencing/src/stores/: chat.js  connection.js  index.js  media.js
svelte-video-conferencing/src/utils/: crypto.js  websocket.js
video_conference_backend/: Cargo.toml
video_conference_backend/src/: config.rs  lib.rs  main.rs
video_conference_backend/src/models/: client.rs  message.rs  mod.rs
video_conference_backend/src/signaling/: handlers.rs  mod.rs  server.rs
