[package]
name = "video_conference_backend"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.20"
futures-util = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10.6"
base64 = "0.21"
chrono = "0.4"
ed25519-dalek = { version = "2.1.0", features = ["rand_core"] }
ring = "0.16.20"
p256 = "0.13.2"